Refactor index.html for updated website layout
Updated the HTML structure and content for the Barbearia Cortezzia website, including new sections for services, values, and contact information.

--- a/index.html
+++ b/index.html
@@ -1,76 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Cortezzia</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <!-- Logo -->
-    <header class="logo">
-        <h1>Barbearia Cortezzia</h1>
+    <header>
+        <img src="logo.png" alt="Logo Cortezzia" class="logo">
+        <h1 class="title">CORTEZZIA BARBEARIA</h1>
+        <p class="desc">A arte de transformar é nossa paixão. Desde 2017 mudando vidas ✂️</p>
     </header>
 
-    <!-- Hero -->
-    <section class="hero">
-        <h2>Estilo, Qualidade e Tradição</h2>
-        <p>Seu visual merece respeito</p>
-
-        <!-- Agendamento -->
-        <div class="agendamento">
-            <a class="btn agendar" target="_blank" href="https://wa.me/55849981747266">
-                Agendar no WhatsApp
-            </a>
-
-            <a class="btn agendar appbarber" target="_blank" 
-               href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u">
-                Agendar pelo App Barber
-            </a>
-        </div>
+    <section class="buttons">
+        <a class="btn" href="#valores">Valores</a>
+        <a class="btn" href="#servicos">Serviços</a>
+        <a class="btn" href="#endereco">Endereço</a>
+        <a class="btn" href="https://wa.me/558498456" target="_blank">WhatsApp</a>
     </section>
 
-    <!-- Serviços -->
-    <section id="servicos" class="servicos">
-        <h2>Nossos Serviços</h2>
-        <div class="cards">
-
-            <div class="card"><h3>Corte</h3><span class="preco">R$ 35</span></div>
-            <div class="card"><h3>Barba</h3><span class="preco">R$ 35</span></div>
-            <div class="card"><h3>Corte Navalhado</h3><span class="preco">R$ 40</span></div>
-            <div class="card"><h3>Corte Tesoura</h3><span class="preco">R$ 40</span></div>
-            <div class="card"><h3>Sobrancelha</h3><span class="preco">R$ 20</span></div>
-            <div class="card"><h3>Barboterapia</h3><span class="preco">R$ 50</span></div>
-            <div class="card"><h3>Progressiva</h3><span class="preco">R$ 120</span></div>
-            <div class="card"><h3>Descoloração</h3><span class="preco">R$ 120</span></div>
-            <div class="card"><h3>Luzes</h3><span class="preco">R$ 100</span></div>
-            <div class="card"><h3>Pigmentação</h3><span class="preco">R$ 30</span></div>
-            <div class="card"><h3>Hidratação</h3><span class="preco">R$ 30</span></div>
-
-        </div>
+    <section id="valores" class="box">
+        <h2>Valores</h2>
+        <p>Cortes, barba, sobrancelha e pacotes especiais por assinatura.</p>
     </section>
 
-    <!-- Contato -->
-    <section class="contato" id="contato">
-        <h2>Contato</h2>
-        <p>📞 WhatsApp: (84) 99817-47266</p>
-        <p>📍 Endereço: (adicione aqui)</p>
+    <section id="servicos" class="box">
+        <h2>Serviços</h2>
+        <p>Atendimento profissional, ambiente climatizado e experiência premium.</p>
+    </section>
 
-        <div class="agendamento">
-            <a class="btn agendar" target="_blank" href="https://wa.me/55849981747266">
-                Agendar no WhatsApp
-            </a>
-
-            <a class="btn agendar appbarber" target="_blank" 
-               href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u">
-                Agendar pelo App Barber
-            </a>
-        </div>
+    <section id="endereco" class="box">
+        <h2>Endereço</h2>
+        <p>Rua Almirante Tamandaré 281, Lagoa Nova, Natal, RN – 59054-560</p>
     </section>
 
     <footer>
-        <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
+        <p>© 2024 Barbearia Cortezzia. Todos os direitos reservados.</p>
     </footer>
 
 </body>
