--- a/index.html
+++ b/index.html
@@ -1,218 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-    <title>Barbearia Cortezzia • Corte, Barba e Estilo em Natal/RN</title>
-
-    <!-- SEO -->
-    <meta name="description" content="Barbearia Cortezzia — cortes masculinos, barba, sobrancelha e serviços premium desde 2017. Agende pelo WhatsApp ou AppBarber. Localizada em Lagoa Nova, Natal/RN.">
-    <meta name="author" content="Barbearia Cortezzia">
-
-    <!-- Pré-carregamento das logos -->
-    <link rel="preload" href="logo1.png" as="image">
-    <link rel="preload" href="logo2.png" as="image">
-
-    <!-- Fonte -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Barbearia Cortezzia — Planos & Agendamento</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <main class="site">
 
-        <!-- HERO -->
+        <!-- HERO / INÍCIO -->
         <header class="hero">
-            <div class="hero-inner">
+            <h1>Barbearia Cortezzia</h1>
+            <p class="tagline">Seu estilo todos os dias — pagando uma única vez.</p>
 
-                <div class="logo-wrap">
-                    <img id="mainLogo" src="logo1.png" alt="Logo Barbearia Cortezzia" class="logo-main" loading="eager">
-                </div>
-
-                <div class="brand-text">
-                    <h1 class="brand-name">CORTEZZIA</h1>
-                    <p class="tagline">Transformando seu estilo desde 2017 ✂️</p>
-
-                    <!-- Seletor de logos -->
-                    <div class="logo-choices" role="group" aria-label="Escolher logo">
-                        <button class="logo-choice active" data-src="logo1.png" aria-label="Logo padrão" aria-pressed="true">
-                            <img src="logo1.png" alt="">
-                        </button>
-                        <button class="logo-choice" data-src="logo2.png" aria-label="Logo temática de Natal">
-                            <img src="logo2.png" alt="">
-                        </button>
-                        <button class="logo-choice" data-src="logo3.png" aria-label="Logo alternativa 1">
-                            <img src="logo3.png" alt="">
-                        </button>
-                        <button class="logo-choice" data-src="logo4.png" aria-label="Logo alternativa 2">
-                            <img src="logo4.png" alt="">
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- CTAs -->
-            <div class="hero-ctas">
-                <a class="btn whatsapp" href="https://wa.me/55849981747266" target="_blank" rel="noopener">
-                    Agendar pelo WhatsApp
-                </a>
-                <a class="btn appbarber" href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" target="_blank" rel="noopener">
-                    Agendar pelo AppBarber
-                </a>
+            <div class="cta-area">
+                <a href="https://wa.me/558499981747266" class="btn whatsapp" target="_blank">WhatsApp</a>
+                <a href="https://www.instagram.com/barbeariacortezzia" class="btn instagram" target="_blank">Instagram</a>
+                <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" class="btn appbarber" target="_blank">Agendar no AppBarber</a>
             </div>
         </header>
 
-        <!-- NAVEGAÇÃO -->
-        <nav class="nav" aria-label="Navegação principal">
-            <a href="#valores">Valores</a>
-            <a href="#servicos">Serviços</a>
-            <a href="#galeria">Galeria</a>
-            <a href="#endereco">Endereço</a>
-            <a href="#contato">Contato</a>
-        </nav>
-
-        <!-- VALORES -->
-        <section id="valores" class="section card-section">
+        <!-- PLANOS -->
+        <section class="section">
             <div class="container">
-                <h2>Valores & Assinaturas</h2>
-                <div class="prices">
+                <h2>Club Cortezzia — Planos Mensais</h2>
+                <p class="muted">Assine e corte de segunda a sábado, todos os dias, pagando apenas uma vez.</p>
 
-                    <article class="price-card">
-                        <h3>Assinatura Mensal</h3>
-                        <p class="price">R$ 89,90 / mês</p>
-                        <p class="muted">Corte + barba (1x por semana)</p>
-                    </article>
+                <div class="plans">
+                    <div class="plan-card">
+                        <h3>Corte Plus</h3>
+                        <p class="price">R$ 84,90 / mês</p>
+                        <p class="desc">Corte ilimitado • Seg a Sáb</p>
+                    </div>
 
-                    <article class="price-card">
-                        <h3>Corte</h3>
-                        <p class="price">R$ 35</p>
-                        <p class="muted">Social, máquina ou tesoura</p>
-                    </article>
+                    <div class="plan-card">
+                        <h3>Barba Plus</h3>
+                        <p class="price">R$ 99,90 / mês</p>
+                        <p class="desc">Barba ilimitada • Seg a Sáb</p>
+                    </div>
 
-                    <article class="price-card">
-                        <h3>Barba</h3>
-                        <p class="price">R$ 35</p>
-                        <p class="muted">Desenho, navalha e finalização</p>
-                    </article>
+                    <div class="plan-card">
+                        <h3>Corte + Barba Plus</h3>
+                        <p class="price">R$ 164,90 / mês</p>
+                        <p class="desc">Corte e barba ilimitados • Seg a Sáb</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- SERVIÇOS -->
-        <section id="servicos" class="section">
-            <div class="container">
-                <h2>Nossos Serviços</h2>
-
-                <div class="cards services-grid">
-                    <div class="service"><h4>Corte</h4><span>R$ 35</span></div>
-                    <div class="service"><h4>Barba</h4><span>R$ 35</span></div>
-                    <div class="service"><h4>Corte Navalhado</h4><span>R$ 40</span></div>
-                    <div class="service"><h4>Corte Tesoura</h4><span>R$ 40</span></div>
-                    <div class="service"><h4>Sobrancelha</h4><span>R$ 20</span></div>
-                    <div class="service"><h4>Barboterapia</h4><span>R$ 50</span></div>
-                    <div class="service"><h4>Progressiva</h4><span>R$ 120</span></div>
-                    <div class="service"><h4>Luzes / Descoloração</h4><span>R$ 100–120</span></div>
-                    <div class="service"><h4>Pigmentação / Hidratação</h4><span>R$ 30</span></div>
-                </div>
-            </div>
-        </section>
-
-        <!-- GALERIA -->
-        <section id="galeria" class="section gallery-section">
-            <div class="container">
-                <h2>Galeria</h2>
-                <p class="muted">Acompanhe mais no Instagram</p>
-
-                <div class="gallery-grid">
-                    <img src="gallery1.jpg" alt="Corte 1" loading="lazy">
-                    <img src="gallery2.jpg" alt="Corte 2" loading="lazy">
-                    <img src="gallery3.jpg" alt="Corte 3" loading="lazy">
-                    <img src="gallery4.jpg" alt="Corte 4" loading="lazy">
-                    <img src="gallery5.jpg" alt="Corte 5" loading="lazy">
-                    <img src="gallery6.jpg" alt="Corte 6" loading="lazy">
-                </div>
-
-                <a class="btn outline" href="https://www.instagram.com/barbeariacortezzia" target="_blank" rel="noopener">
-                    Ver no Instagram
-                </a>
             </div>
         </section>
 
         <!-- ENDEREÇO -->
-        <section id="endereco" class="section card-section">
+        <section class="section white">
             <div class="container">
                 <h2>Endereço</h2>
-                <p class="muted">Rua Almirante Tamandaré 281, Lagoa Nova, Natal/RN — 59054-560</p>
-
-                <div class="map-wrap">
-                    <iframe
-                        title="Mapa da Barbearia Cortezzia"
-                        src="https://www.google.com/maps?q=Rua%20Almirante%20Tamandare%20281,Natal&output=embed"
-                        loading="lazy">
-                    </iframe>
-                </div>
+                <p class="muted">Rua Almirante Tamandaré 281, Lagoa Nova — Natal/RN</p>
             </div>
         </section>
 
         <!-- CONTATO -->
-        <section id="contato" class="section contact-section">
-            <div class="container contact-grid">
-
-                <div class="contact-card">
-                    <h3>Fale Conosco</h3>
-                    <p>📞 WhatsApp: 
-                        <a href="https://wa.me/55849981747266" target="_blank" rel="noopener">
-                            (84) 99817-47266
-                        </a>
-                    </p>
-                    <p>⏰ Terça a Domingo: 09h às 19h</p>
-                </div>
-
-                <div class="contact-card">
-                    <h3>Redes sociais</h3>
-                    <p><a href="https://www.instagram.com/barbeariacortezzia" target="_blank">Instagram</a></p>
-                    <p><a href="https://linktr.ee/barbeariacortezzia" target="_blank">Linktree</a></p>
-                </div>
+        <section class="section">
+            <div class="container">
+                <h2>Contato</h2>
+                <p>📞 WhatsApp: <a href="https://wa.me/558499981747266">(84) 99817-47266</a></p>
+                <p>📸 Instagram: <a href="https://www.instagram.com/barbeariacortezzia">@barbeariacortezzia</a></p>
+                <p>📲 AppBarber: <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u">Agendar agora</a></p>
             </div>
         </section>
 
-        <!-- RODAPÉ -->
         <footer class="footer">
             <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
         </footer>
 
     </main>
 
-    <!-- SCRIPT: troca de logo otimizado -->
-    <script>
-        const mainLogo = document.getElementById('mainLogo');
-
-        document.querySelectorAll('.logo-choice').forEach(btn => {
-            btn.addEventListener('click', () => {
-                const src = btn.dataset.src;
-
-                // preload + troca suave
-                const temp = new Image();
-                temp.onload = () => {
-                    mainLogo.classList.add('fade');
-                    setTimeout(() => {
-                        mainLogo.src = src;
-                        mainLogo.classList.remove('fade');
-                    }, 150);
-                };
-                temp.src = src;
-
-                document.querySelectorAll('.logo-choice')
-                    .forEach(b => b.classList.remove('active'));
-
-                btn.classList.add('active');
-            });
-        });
-
-        mainLogo.addEventListener('error', () => {
-            mainLogo.style.display = 'none';
-        });
-    </script>
 </body>
 </html>
