Revise index.html with new services and contact info
Updated contact links and added individual services section.

--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia Cortezzia — Planos & Agendamento</title>
+    <title>Barbearia Cortezzia — Planos e Agendamentos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <main class="site">
 
-        <!-- HERO / INÍCIO -->
+        <!-- HERO -->
         <header class="hero">
             <h1>Barbearia Cortezzia</h1>
             <p class="tagline">Seu estilo todos os dias — pagando uma única vez.</p>
 
             <div class="cta-area">
-                <a href="https://wa.me/558499981747266" class="btn whatsapp" target="_blank">WhatsApp</a>
-                <a href="https://www.instagram.com/barbeariacortezzia" class="btn instagram" target="_blank">Instagram</a>
-                <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" class="btn appbarber" target="_blank">Agendar no AppBarber</a>
+                <a href="https://wa.me/qr/7NIQ3RFN466AB1" class="btn whatsapp" target="_blank">
+                    WhatsApp (QR Code)
+                </a>
+
+                <a href="https://www.instagram.com/barbeariacortezzia" class="btn instagram" target="_blank">
+                    Instagram
+                </a>
+
+                <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" class="btn appbarber" target="_blank">
+                    Agendar no AppBarber
+                </a>
             </div>
         </header>
 
@@ -32,39 +40,105 @@
                     <div class="plan-card">
                         <h3>Corte Plus</h3>
                         <p class="price">R$ 84,90 / mês</p>
-                        <p class="desc">Corte ilimitado • Seg a Sáb</p>
+                        <p class="desc">Cortes ilimitados — Seg a Sáb</p>
                     </div>
 
                     <div class="plan-card">
                         <h3>Barba Plus</h3>
                         <p class="price">R$ 99,90 / mês</p>
-                        <p class="desc">Barba ilimitada • Seg a Sáb</p>
+                        <p class="desc">Barba ilimitada — Seg a Sáb</p>
                     </div>
 
                     <div class="plan-card">
                         <h3>Corte + Barba Plus</h3>
                         <p class="price">R$ 164,90 / mês</p>
-                        <p class="desc">Corte e barba ilimitados • Seg a Sáb</p>
+                        <p class="desc">Corte e Barba ilimitados — Seg a Sáb</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- ENDEREÇO -->
+        <!-- SERVIÇOS INDIVIDUAIS -->
         <section class="section white">
             <div class="container">
+                <h2>Serviços Avulsos</h2>
+
+                <div class="plans">
+
+                    <div class="plan-card">
+                        <h3>Corte</h3>
+                        <p class="price">R$ 35</p>
+                    </div>
+
+                    <div class="plan-card">
+                        <h3>Barba</h3>
+                        <p class="price">R$ 35</p>
+                    </div>
+
+                    <div class="plan-card">
+                        <h3>Corte Navalhado</h3>
+                        <p class="price">R$ 40</p>
+                    </div>
+
+                    <div class="plan-card">
+                        <h3>Sobrancelha</h3>
+                        <p class="price">R$ 20</p>
+                    </div>
+
+                    <div class="plan-card">
+                        <h3>Barboterapia</h3>
+                        <p class="price">R$ 50</p>
+                    </div>
+
+                    <div class="plan-card">
+                        <h3>Progressiva</h3>
+                        <p class="price">R$ 120</p>
+                    </div>
+
+                    <div class="plan-card">
+                        <h3>Luzes / Descoloração</h3>
+                        <p class="price">R$ 100 – 120</p>
+                    </div>
+
+                    <div class="plan-card">
+                        <h3>Pigmentação / Hidratação</h3>
+                        <p class="price">R$ 30</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- ENDEREÇO -->
+        <section class="section">
+            <div class="container">
                 <h2>Endereço</h2>
-                <p class="muted">Rua Almirante Tamandaré 281, Lagoa Nova — Natal/RN</p>
+                <p class="muted">Rua Almirante Tamandaré 281 — Lagoa Nova, Natal/RN</p>
             </div>
         </section>
 
         <!-- CONTATO -->
-        <section class="section">
+        <section class="section white">
             <div class="container">
                 <h2>Contato</h2>
-                <p>📞 WhatsApp: <a href="https://wa.me/558499981747266">(84) 99817-47266</a></p>
-                <p>📸 Instagram: <a href="https://www.instagram.com/barbeariacortezzia">@barbeariacortezzia</a></p>
-                <p>📲 AppBarber: <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u">Agendar agora</a></p>
+
+                <p>📱 WhatsApp (QR Code):  
+                    <a href="https://wa.me/qr/7NIQ3RFN466AB1" target="_blank">
+                        Clique aqui para abrir
+                    </a>
+                </p>
+
+                <p>📸 Instagram:  
+                    <a href="https://www.instagram.com/barbeariacortezzia" target="_blank">
+                        @barbeariacortezzia
+                    </a>
+                </p>
+
+                <p>📲 AppBarber:  
+                    <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" target="_blank">
+                        Agendar agora
+                    </a>
+                </p>
             </div>
         </section>
 
