--- a/index.html
+++ b/index.html
@@ -3,150 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia Cortezzia — Planos e Agendamentos</title>
+    <title>Barbearia Cortezzia — Planos e Agendamento</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <main class="site">
+<main class="site">
 
-        <!-- HERO -->
-        <header class="hero">
-            <h1>Barbearia Cortezzia</h1>
-            <p class="tagline">Seu estilo todos os dias — pagando uma única vez.</p>
+    <!-- HERO / INÍCIO -->
+    <header class="hero">
+        <h1>Barbearia Cortezzia</h1>
+        <p class="tagline">Seu estilo todos os dias — pagando uma única vez.</p>
 
-            <div class="cta-area">
-                <a href="https://wa.me/qr/7NIQ3RFN466AB1" class="btn whatsapp" target="_blank">
-                    WhatsApp (QR Code)
-                </a>
+        <div class="qr-box">
+            <img src="https://api.qrserver.com/v1/create-qr-code/?size=240x240&data=https://wa.me/qr/7NIQ3RFN466AB1" 
+                 alt="QR Code WhatsApp" class="qr-code">
+            <p class="muted">Escaneie o QR Code para falar no WhatsApp</p>
+        </div>
 
-                <a href="https://www.instagram.com/barbeariacortezzia" class="btn instagram" target="_blank">
-                    Instagram
-                </a>
+        <div class="cta-area">
+            <a href="https://wa.me/qr/7NIQ3RFN466AB1" class="btn whatsapp" target="_blank">
+                Abrir WhatsApp
+            </a>
 
-                <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" class="btn appbarber" target="_blank">
-                    Agendar no AppBarber
-                </a>
-            </div>
-        </header>
+            <a href="https://www.instagram.com/barbeariacortezzia" class="btn instagram" target="_blank">
+                Instagram
+            </a>
 
-        <!-- PLANOS -->
-        <section class="section">
-            <div class="container">
-                <h2>Club Cortezzia — Planos Mensais</h2>
-                <p class="muted">Assine e corte de segunda a sábado, todos os dias, pagando apenas uma vez.</p>
+            <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" class="btn appbarber" target="_blank">
+                Agendar no AppBarber
+            </a>
+        </div>
+    </header>
 
-                <div class="plans">
-                    <div class="plan-card">
-                        <h3>Corte Plus</h3>
-                        <p class="price">R$ 84,90 / mês</p>
-                        <p class="desc">Cortes ilimitados — Seg a Sáb</p>
-                    </div>
+    <!-- PLANOS PREMIUM -->
+    <section class="section">
+        <div class="container">
+            <h2>Club Cortezzia — Planos Mensais</h2>
+            <p class="muted">Assine e corte de segunda a sábado, todos os dias, pagando apenas 1 vez.</p>
 
-                    <div class="plan-card">
-                        <h3>Barba Plus</h3>
-                        <p class="price">R$ 99,90 / mês</p>
-                        <p class="desc">Barba ilimitada — Seg a Sáb</p>
-                    </div>
+            <div class="plans premium">
 
-                    <div class="plan-card">
-                        <h3>Corte + Barba Plus</h3>
-                        <p class="price">R$ 164,90 / mês</p>
-                        <p class="desc">Corte e Barba ilimitados — Seg a Sáb</p>
-                    </div>
+                <div class="plan-card">
+                    <h3>Corte Plus</h3>
+                    <p class="price">R$ 84,90 / mês</p>
+                    <ul>
+                        <li>Cortes ilimitados</li>
+                        <li>Segunda a sábado</li>
+                        <li>Assinatura mensal</li>
+                    </ul>
                 </div>
-            </div>
-        </section>
 
-        <!-- SERVIÇOS INDIVIDUAIS -->
-        <section class="section white">
-            <div class="container">
-                <h2>Serviços Avulsos</h2>
-
-                <div class="plans">
-
-                    <div class="plan-card">
-                        <h3>Corte</h3>
-                        <p class="price">R$ 35</p>
-                    </div>
-
-                    <div class="plan-card">
-                        <h3>Barba</h3>
-                        <p class="price">R$ 35</p>
-                    </div>
-
-                    <div class="plan-card">
-                        <h3>Corte Navalhado</h3>
-                        <p class="price">R$ 40</p>
-                    </div>
-
-                    <div class="plan-card">
-                        <h3>Sobrancelha</h3>
-                        <p class="price">R$ 20</p>
-                    </div>
-
-                    <div class="plan-card">
-                        <h3>Barboterapia</h3>
-                        <p class="price">R$ 50</p>
-                    </div>
-
-                    <div class="plan-card">
-                        <h3>Progressiva</h3>
-                        <p class="price">R$ 120</p>
-                    </div>
-
-                    <div class="plan-card">
-                        <h3>Luzes / Descoloração</h3>
-                        <p class="price">R$ 100 – 120</p>
-                    </div>
-
-                    <div class="plan-card">
-                        <h3>Pigmentação / Hidratação</h3>
-                        <p class="price">R$ 30</p>
-                    </div>
-
+                <div class="plan-card highlight">
+                    <h3>Corte + Barba Plus</h3>
+                    <p class="price">R$ 164,90 / mês</p>
+                    <ul>
+                        <li>Corte ilimitado</li>
+                        <li>Barba ilimitada</li>
+                        <li>Segunda a sábado</li>
+                    </ul>
                 </div>
+
+                <div class="plan-card">
+                    <h3>Barba Plus</h3>
+                    <p class="price">R$ 99,90 / mês</p>
+                    <ul>
+                        <li>Barba ilimitada</li>
+                        <li>Segunda a sábado</li>
+                        <li>Assinatura mensal</li>
+                    </ul>
+                </div>
+
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- ENDEREÇO -->
-        <section class="section">
-            <div class="container">
-                <h2>Endereço</h2>
-                <p class="muted">Rua Almirante Tamandaré 281 — Lagoa Nova, Natal/RN</p>
+    <!-- SERVIÇOS AVULSOS -->
+    <section class="section white">
+        <div class="container">
+            <h2>Serviços Avulsos</h2>
+
+            <div class="plans">
+                <div class="plan-card"><h3>Corte</h3><p class="price">R$ 35</p></div>
+                <div class="plan-card"><h3>Barba</h3><p class="price">R$ 35</p></div>
+                <div class="plan-card"><h3>Corte Navalhado</h3><p class="price">R$ 40</p></div>
+                <div class="plan-card"><h3>Sobrancelha</h3><p class="price">R$ 20</p></div>
+                <div class="plan-card"><h3>Barboterapia</h3><p class="price">R$ 50</p></div>
+                <div class="plan-card"><h3>Progressiva</h3><p class="price">R$ 120</p></div>
+                <div class="plan-card"><h3>Luzes / Descoloração</h3><p class="price">R$ 100–120</p></div>
+                <div class="plan-card"><h3>Pigmentação / Hidratação</h3><p class="price">R$ 30</p></div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- CONTATO -->
-        <section class="section white">
-            <div class="container">
-                <h2>Contato</h2>
+    <!-- ENDEREÇO -->
+    <section class="section">
+        <div class="container">
+            <h2>Endereço</h2>
+            <p class="muted">Rua Almirante Tamandaré 281 — Lagoa Nova, Natal/RN</p>
+        </div>
+    </section>
 
-                <p>📱 WhatsApp (QR Code):  
-                    <a href="https://wa.me/qr/7NIQ3RFN466AB1" target="_blank">
-                        Clique aqui para abrir
-                    </a>
-                </p>
+    <!-- CONTATO -->
+    <section class="section white">
+        <div class="container">
+            <h2>Contato</h2>
 
-                <p>📸 Instagram:  
-                    <a href="https://www.instagram.com/barbeariacortezzia" target="_blank">
-                        @barbeariacortezzia
-                    </a>
-                </p>
+            <p>📱 WhatsApp (QR Code):  
+                <a href="https://wa.me/qr/7NIQ3RFN466AB1" target="_blank">
+                    Abrir conversa
+                </a>
+            </p>
 
-                <p>📲 AppBarber:  
-                    <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" target="_blank">
-                        Agendar agora
-                    </a>
-                </p>
-            </div>
-        </section>
+            <p>📸 Instagram:  
+                <a href="https://www.instagram.com/barbeariacortezzia" target="_blank">
+                    @barbeariacortezzia
+                </a>
+            </p>
 
-        <footer class="footer">
-            <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
-        </footer>
+            <p>📲 AppBarber:  
+                <a href="https://sites.appbarber.com.br/barbeariacortezzia-bd0u" target="_blank">
+                    Agendar agora
+                </a>
+            </p>
+        </div>
+    </section>
 
-    </main>
+    <footer class="footer">
+        <p>© 2025 Barbearia Cortezzia — Todos os direitos reservados</p>
+    </footer>
+
+</main>
 
 </body>
 </html>
